# Etrid

./: .env.example  .env.forum.example  .gitignore  .gitignore.multi-node  3_STEP_PLAN_COMPLETION_SUMMARY.md  AI_ASSISTANT_PROMPTS.md  AI_COMPUTE_PBC_IMPLEMENTATION_GUIDE.md  ASF_GRANDPA_ANALYSIS_INDEX.md  ASF_LOGGING_ANALYSIS.md  ASF_MAINNET_DEPLOYMENT_GUIDE.md  ASF_RUNTIME_API_INTEGRATION_COMPLETE.md  ASF_VOTE_GENERATION_ANALYSIS.md  ASF_VS_GRANDPA_FINALITY_ANALYSIS.md  AUDIT_PACKAGE_DELIVERY_CHECKLIST.md  AUDIT_SUMMARY.txt  AZURE_NSG_CLEANUP_PLAN.md  AZURE_NSG_FIX_INSTRUCTIONS.md  BOOTNODES.md  BRANCH_CONSOLIDATION_COMPLETE.md  BRIDGE_CONFIG_TRAITS.txt  BRIDGE_INTEGRATION_COMPLETE.md  BRIDGE_INTEGRATION_SUCCESS.md  BUILD_FIXES_SUMMARY.md  BUILD_FIX_STABLE2509.md  BUILD_VERIFICATION_REPORT.md  CHECKPOINT_FINALITY_DEADLOCK_INCIDENT.md  CHECKPOINT_SIGNATURE_VERIFICATION_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  COCOON_ANALYSIS_AND_INTEGRATION.md  CODEBASE_CONSOLIDATION_REPORT.md  CODE_COMPARISON_REFERENCE.md  CODE_OF_CONDUCT.md  CODE_REFERENCE_ASF_P2P_INTEGRATION.md  COMPLETE_BUILD_FIXES_SUMMARY.md  CONTINUE_IN_NEW_TERMINAL.txt  CONTRACTS_VERIFIED_SUCCESS.md  CONTRIBUTING.md  CURRENT_STATUS_TERMINAL7_SESSION3_COMPLETE.md  Cargo-full.toml  Cargo.toml  (+186 more)
01-detr-p2p/aecomms/: Cargo.toml
01-detr-p2p/aecomms/src/: lib.rs
01-detr-p2p/detrp2p/: Cargo.toml
01-detr-p2p/detrp2p/src/: lib.rs
01-detr-p2p/director-node/: ARCHITECTURE.md  Cargo.toml  QUICK_REFERENCE.md  README.md
01-detr-p2p/director-node/examples/: director1.json  director2.json  director3.json
01-detr-p2p/director-node/src/: lib.rs  main.rs  relay.rs  slashing.rs
01-detr-p2p/dpeers/: Cargo.toml
01-detr-p2p/dpeers/src/: lib.rs
01-detr-p2p/etrid-protocol/: Cargo.toml
01-detr-p2p/etrid-protocol/gadget-network-bridge/src/: lib.rs
01-detr-p2p/etrid-protocol/src/: lib.rs
01-detr-p2p/fluent/: Cargo.toml
01-detr-p2p/fluent/src/: lib.rs
01-detr-p2p/stored/: Cargo.toml
01-detr-p2p/stored/src/: lib.rs
02-open-did/aidid/: Cargo.toml
02-open-did/aidid/src/: attestation.rs  lib.rs  registry.rs  types.rs
02-open-did/registry/: Cargo.toml
02-open-did/registry/proto/: did.proto
02-open-did/registry/src/: did.rs  lib.rs  main.rs
02-open-did/resolver/: Cargo.toml
02-open-did/resolver/src/: lib.rs
02-open-did/types/: Cargo.toml
02-open-did/types/src/: lib.rs
03-security/cryptography/: Cargo.toml
03-security/cryptography/src/: lib.rs
03-security/key-management/: Cargo.toml
03-security/key-management/src/: lib.rs
03-security/post-quantum/: Cargo.toml  PQC_MIGRATION_STRATEGY.md  README.md
03-security/post-quantum/src/: lib.rs
04-accounts/pallet/: Cargo.toml
04-accounts/pallet/src/: benchmarking.rs  lib.rs
04-accounts/types/: Cargo.toml
04-accounts/types/src/: lib.rs
05-multichain/primitives/: Cargo.toml
05-multichain/primitives/src/: flare_chain_blocks.rs  lib.rs  pbc_blocks.rs  vmw.rs
06-native-currency/: ARCHITECTURE.md  Cargo.toml  keyconstantsrefetrvmw.md
06-native-currency/economics/: Cargo.toml
06-native-currency/economics/src/: lib.rs
06-native-currency/etd-stablecoin/: Cargo.toml
06-native-currency/etd-stablecoin/src/: lib.rs
06-native-currency/etr-token/: Cargo.toml
06-native-currency/etr-token/src/: lib.rs
06-native-currency/pallets/pallet-custodian-registry/src/: lib.rs
06-native-currency/pallets/pallet-edsc-stability/: Cargo.toml
06-native-currency/pallets/pallet-edsc-stability/src/: lib.rs
06-native-currency/pallets/pallet-etr-lock/: BRIDGE_INTEGRATION_GUIDE.md  Cargo.toml
06-native-currency/pallets/pallet-multiasset-reserve/: Cargo.toml
06-native-currency/pallets/pallet-multiasset-reserve/src/: lib.rs  tests.rs
06-native-currency/pallets/pallet-oracle-network/: Cargo.toml
06-native-currency/pallets/pallet-oracle-network/src/: lib.rs  tests.rs
06-native-currency/pallets/pallet-reserve-backed-token/src/: lib.rs
06-native-currency/pallets/pallet-reserve-oracle/: Cargo.toml  ORACLE_ENHANCEMENTS.md  TEST_FIXES_SUMMARY.md  TEST_SUMMARY.md
06-native-currency/pallets/pallet-reserve-oracle/src/: lib.rs  tests.rs
06-native-currency/pallets/pallet-reserve-vault/src/: lib.rs
06-native-currency/vmw-gas/: Cargo.toml
06-native-currency/vmw-gas/src/: lib.rs
07-transactions/cross-chain/: Cargo.toml
07-transactions/cross-chain/src/: lib.rs
07-transactions/lightning-bloc/: CROSS_PBC_INTEGRATION_COMPLETE.md  Cargo.toml  DEPLOYMENT_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_OPPORTUNITIES.md  LAYER2_IMPLEMENTATION_REPORT.md  NETWORK_INTEGRATION.md  ROUTING_GUIDE.md  WATCHTOWER_INCENTIVES.md  demo_cross_chain  demo_cross_chain_routing.rs  deploy_testnet.sh  test_multi_hop_payment.sh
07-transactions/lightning-bloc/api-server/: Cargo.toml  README.md
07-transactions/lightning-bloc/api-server/src/: auth.rs  handlers.rs  main.rs  (+7 more)
07-transactions/lightning-bloc/benches/: routing_bench.rs
07-transactions/lightning-bloc/examples/: watchtower_demo.rs
07-transactions/lightning-bloc/src/: auto_discovery.rs  batching.rs  cross_pbc_router.rs  emergency.rs  fraud_proofs.rs  gossip.rs  invoice.rs  lib.rs  lsp.rs  multi_party.rs  multi_path_payments.rs  optimistic_rollup.rs  oracle_integration.rs  rebalancing.rs  recurring.rs  routing.rs  streaming.rs  submarine_swaps.rs  watchtower.rs
07-transactions/lightning-bloc/tests/: edsc_integration_test.sh  integration_test.rs  multi_hop_integration_test.rs
07-transactions/lightning-bloc/watchtower/: Cargo.toml
07-transactions/smart-contract/: Cargo.toml
07-transactions/smart-contract/src/: lib.rs
07-transactions/stake-deposit/: Cargo.toml
07-transactions/stake-deposit/src/: lib.rs
07-transactions/tx-processor/: Cargo.toml
07-transactions/tx-processor/src/: lib.rs
07-transactions/types/: Cargo.toml
07-transactions/types/src/: lib.rs
08-etwasm-vm/gas-metering/: Cargo.toml
sdk/: Cargo.toml
sdk/bindings/: README.md
sdk/bindings/js-etrid-sdk/: README.md
sdk/bindings/python-etrid-sdk/: README.md
sdk/bindings/rust-etrid-sdk/: README.md
sdk/bindings/swift-etrid-sdk/: README.md
(+3927 files in other folders)
